record integrado y token que pashooooo
xd uwu yolo lol