@@ -1,4 +1,4 @@
-package com.mazanex.profile.config; 
+package com.mazanex.profile.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,8 +11,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,19 +26,31 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Habilita CORS
+            // Habilitar la configuración de CORS definida abajo
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) 
+            
+            // Deshabilitar CSRF obligatorio para APIs REST con JWT
             .csrf(csrf -> csrf.disable())
+            
+            // Política de sesión sin estado
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
+            
+            // Reglas de autorización de rutas
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // Deja pasar la verificación del navegador
+                // Dejar pasar las peticiones preflight del navegador
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() 
+                
+                // Endpoints públicos explícitos
                 .requestMatchers(HttpMethod.GET, "/api/profile/list").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/profile/social/public/**").permitAll()
-                // Require authentication for POST/PUT (use JWT)
-                // NOTE: removed temporary permitAll used for debugging
+                
+                // Cualquier otra petición (como el PUT /{id}) requerirá token válido
                 .anyRequest().authenticated()
             )
+            
+            // Inyectamos nuestro filtro antes del interceptor básico de Spring
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -48,9 +59,12 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*")); 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        
+        // Permite peticiones desde cualquier origen en desarrollo
+        configuration.setAllowedOrigins(List.of("*")); 
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
